Added new files

--- a/index.html
+++ b/index.html
@@ -17,103 +17,88 @@
           <!-- <img src="logo here" class="logo"> -->
           <ul>
             <li><a href="#header">Home</a></li>
-            <!-- <img src="logo here" class="logo"> -->
-            <li><a href="#about">Reflections on College Life</a></li>
-            <!-- Reflections on College Life -->
-            <li><a href="#services">Internship Learning</a></li>
-            <!-- Internship Learning  -->
+            <li><a href="#about">College Life</a></li>
+            <li><a href="#services">Internship </a></li>
             <li><a href="#portfolio">Portfolio</a></li>
-            <!-- Exemplary Academic Work -->
             <li><a href="#contact">Contact</a></li>
-            <!-- <img src="logo here" class="logo"> -->
           </ul>
         </nav>
-        <div class="header-text">
-          <h1 class="sub-title">About Me</h1>
-          <h2>Hi, I'm Jan Mikhail Talanay!</h2>
-          <p>
-            Hi, I'm Jan Mikhail Talanay I am a dedicated developer with more
-            focuses in Web Applications and Mobile Applications. Taking up upon,
-            Bachelor of Science in Information Systems degree. Learning from
-            this degree has given me a solid basis on which on how to build and
-            scalable and effective solutions. I work best in group settings,
-            where i can use my knowledge that i have learned in my time in
-            college to help innovative applications
-          </p>
-          <a
-            href="Jan_Talanay_Resume.pdf"
-            download
-            class="btn btn2"
-            >My Resume</a
-          >
-          <div class="tab-tiles">
-            <p class="tab-links active-link" onclick="opentab('skills')">
-              Skills
+        <div class="row1">
+          <div class="header-text">
+            <h1 class="sub-title">About Me</h1>
+            <p>
+              Hi, I'm Jan Mikhail Talanay I am a dedicated developer with more
+              focuses in Web Applications and Mobile Applications. Taking up
+              upon, Bachelor of Science in Information Systems degree. Learning
+              from this degree has given me a solid basis on which on how to
+              build and scalable and effective solutions. I work best in group
+              settings, where i can use my knowledge that i have learned in my
+              time in college to help innovative applications
             </p>
-            <p class="tab-links" onclick="opentab('experience')">Experience</p>
-            <p class="tab-links" onclick="opentab('education')">Education</p>
-            <p class="tab-links" onclick="opentab('awards')">Awards</p>
+            <a href="Jan_Talanay_Resume.pdf" download class="btn btn2"
+              >My Resume</a
+            >
+            <div class="tab-tiles">
+              <p class="tab-links active-link" onclick="opentab('skills')">
+                Skills
+              </p>
+              <p class="tab-links" onclick="opentab('education')">Education</p>
+              <p class="tab-links" onclick="opentab('awards')">Awards</p>
+            </div>
+            <div class="tab-contents active-tab" id="skills">
+              <ul>
+                <li>
+                  <span>Oriented in Microsoft Applications</span><br />Microsoft
+                  Word && Microsoft Powerpoint
+                </li>
+                <li>
+                  <span>Proficient in the following programming languages</span
+                  ><br />Java, Kotlin, HTML, C#, Docker, Node.js
+                </li>
+                <li>
+                  <span>Oriented in Adobe software </span><br />Adobe Photoshop,
+                  Adobe Premier
+                </li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="education">
+              <ul>
+                <li>
+                  <span>San Jose Tagapagtanggol Parochial School</span
+                  ><br />2014 - 2020
+                </li>
+                <li>
+                  <span>De La Salle - College Of Saint Benilde</span><br />2020
+                  - Present
+                </li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="awards">
+              <ul>
+                <li>
+                  <span>De La Salle - College Of Saint Benilde</span><br />AIM
+                  Hackathon 2nd Place
+                </li>
+                <li>
+                  <span>De La Salle - College Of Saint Benilde</span
+                  ><br />Dean's List for 1st Term, AY 2021-2022
+                </li>
+                <li>
+                  <span>De La Salle - College Of Saint Benilde</span
+                  ><br />Dean's List for 2nd Term, AY 2021-2022
+                </li>
+                <li>
+                  <span>De La Salle - College Of Saint Benilde</span
+                  ><br />Dean's List for 3rd Term, AY 2021-2022
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="tab-contents active-tab" id="skills">
-            <ul>
-              <li>
-                <span>Oriented in Microsoft Applications</span><br />Microsoft
-                Word && Microsoft Powerpoint
-              </li>
-              <li>
-                <span>Proficient in the following programming languages</span
-                ><br />Java, Kotlin, HTML, C#, Docker, Node.js
-              </li>
-              <li>
-                <span>Oriented in Adobe software </span><br />Adobe Photoshop,
-                Adobe Premier
-              </li>
-            </ul>
-          </div>
-
-          <div class="tab-contents" id="experience">
-            <ul>
-              <li><span>experience</span><br />Designer Web/App interfaces</li>
-              <li><span>experience1</span><br />Web Development</li>
-              <li><span>experience2</span><br />App Development</li>
-            </ul>
-          </div>
-
-          <div class="tab-contents" id="education">
-            <ul>
-              <li>
-                <span>San Jose Tagapagtanggol Parochial School</span><br />2014
-                - 2020
-              </li>
-              <li>
-                <span>De La Salle - College Of Saint Benilde</span><br />2020 -
-                Present
-              </li>
-            </ul>
-          </div>
-          <div class="tab-contents" id="awards">
-            <ul>
-              <li>
-                <span>De La Salle - College Of Saint Benilde</span><br />AIM
-                Hackathon 2nd Place
-              </li>
-              <li>
-                <span>De La Salle - College Of Saint Benilde</span><br />Dean's
-                List for 1st Term, AY 2021-2022
-              </li>
-              <li>
-                <span>De La Salle - College Of Saint Benilde</span><br />Dean's
-                List for 2nd Term, AY 2021-2022
-              </li>
-              <li>
-                <span>De La Salle - College Of Saint Benilde</span><br />Dean's
-                List for 3rd Term, AY 2021-2022
-              </li>
-            </ul>
-          </div>
+          <img src="jan1.jpg" style="width: 50%" />
         </div>
       </div>
     </div>
+
     <!-- ---------------about---------------- -->
     <div id="about">
       <div class="container">
@@ -121,25 +106,55 @@
           <div class="about-col-1">
             <div class="slideshow-container">
               <div class="mySlides fade">
-                <img src="jan6.jpg" style="width: 100%" />
+                <img src="college.jpg" style="width: 100%" />
               </div>
               <div class="mySlides fade">
-                <img src="jan7.jpg" style="width: 100%" />
+                <img src="college2.jpg" style="width: 100%" />
               </div>
               <div class="mySlides fade">
-                <img src="jan5.jpg" style="width: 100%" />
+                <img src="jan3.jpg" style="width: 100%" />
               </div>
               <div class="mySlides fade">
                 <img src="jan4.jpg" style="width: 100%" />
               </div>
               <div class="mySlides fade">
-                <img src="jan3.jpg" style="width: 100%" />
+                <img src="jan5.jpg" style="width: 100%" />
               </div>
             </div>
           </div>
           <div class="about-col-2">
-            <h1 class="sub-title">Reflections on College Life</h1>
-            <p>My reflection on my college life, i would say it</p>
+            <h1 class="sub-title-2">Reflections on College Life</h1>
+            <p>
+              I would say i had a difficult time starting in college, due the
+              fact it started at the rise of the pandemic. Everybody would start
+              adjusting to the new way of learning. At the start, i actually
+              prepared myself especially in programming, because in my Senior
+              High i haven't experience any coding related subjects, but with
+              diligence i actually enjoyed my programming subjects. I appreciate
+              that DLS-CSB has provided me with the chance to learn my course
+              correctly under the guidance of the right lecturers. During my
+              time in college, I had no trouble making friends. Everyone I've
+              come into contact with has been kind, accommodating, and caring.
+              Since knowing how to write codes correctly was the only thing that
+              mattered to me, I did not pay much attention to other subjects.
+            </p>
+            <h1 class="sub-title-2">Career Goals</h1>
+            <p>
+              For my Career Goals, i wanted to graduate on time and become a
+              developer in a company that i want to work with. As i said before,
+              i want to keep on improving on my coding and expand my learnings
+              in terms of new coding either be making mobile application or
+              different tech stack for web and mobile applications.
+            </p>
+            <h1 class="sub-title-2">Next Steps</h1>
+            <p>
+              If everything went good in my part in my career goals. The next
+              steps would be able to keep on improving to code, creating
+              different projects that are innovative and helpful towards other
+              people. I also want to explore different types of area's in the
+              coding environment, its always fun to learn new things and expand
+              my knowledge.
+            </p>
           </div>
         </div>
       </div>
@@ -152,8 +167,7 @@
         <h1 class="sub-title">Internship Learning</h1>
         <div class="services-list">
           <div>
-            <i class="las la-laptop-code"></i>
-
+            <i class="las la-briefcase"></i>
             <h2>Starting in OJT</h2>
             <p>
               When i started doing my internship at gallium, it was a cultural
@@ -167,7 +181,7 @@
             <a href="#">Learn more</a>
           </div>
           <div>
-            <i class="las la-laptop-code"></i>
+            <i class="las la-book-open"></i>
             <h2>Learnings</h2>
             <p>
               During my internship i have learned a lot of things, especially as
@@ -183,7 +197,7 @@
             <a href="#">Learn more</a>
           </div>
           <div>
-            <i class="las la-laptop-code"></i>
+            <i class="las la-project-diagram"></i>
             <h2>Internal Project</h2>
             <p>
               By the end of march, we were now tasked to do an internal project,
@@ -263,8 +277,10 @@
             <p><i class="las la-laptop-code"></i>jantalanay@gmail.com</p>
             <p><i class="las la-laptop-code"></i>09667913094</p>
             <div class="social-icons">
-              <a href="linkedin"></a>
-              <a href="facebook"></a>
+              <a href="linkedin"><i class="lab la-linkedin"></i></a>
+              <a href="https://github.com/JanTalanay"
+                ><i class="lab la-github"></i
+              ></a>
             </div>
           </div>
           <div class="contact-right">
