--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               from this degree has given me a solid basis on which on how to
               build and scalable and effective solutions. I work best in group
               settings, where i can use my knowledge that i have learned in my
-              time in college to help innovative applications
+              time in college to help build innovative applications
             </p>
             <a href="Jan_Talanay_Resume.pdf" download class="btn btn2"
               >My Resume</a
@@ -140,20 +140,30 @@
             </p>
             <h1 class="sub-title-2">Career Goals</h1>
             <p>
-              For my Career Goals, i wanted to graduate on time and become a
-              developer in a company that i want to work with. As i said before,
-              i want to keep on improving on my coding and expand my learnings
-              in terms of new coding either be making mobile application or
-              different tech stack for web and mobile applications.
+              In pursuit of my career goals, my primary aim is to graduate on
+              time and secure a position as a developer in a company aligned
+              with my aspirations. Beyond this, I am driven by a deep-seated
+              desire to continually enhance my coding skills and broaden my
+              knowledge base. This involves venturing into new territories,
+              whether it's delving into mobile application development or
+              mastering various tech stacks for web and mobile applications. I
+              am committed to embracing challenges and pushing my boundaries to
+              realize my full potential in the dynamic field of software
+              development. Additionally, I aim to actively seek mentorship
+              opportunities and engage in networking to gain insights from
+              seasoned professionals, thereby accelerating my growth trajectory
+              in the industry.
             </p>
             <h1 class="sub-title-2">Next Steps</h1>
             <p>
-              If everything went good in my part in my career goals. The next
-              steps would be able to keep on improving to code, creating
-              different projects that are innovative and helpful towards other
-              people. I also want to explore different types of area's in the
-              coding environment, its always fun to learn new things and expand
-              my knowledge.
+              If everything goes well in my career journey, my next steps would
+              involve continuous improvement in coding skills. I aim to create
+              innovative projects that not only challenge me but also contribute
+              positively to others' lives. Additionally, I aspire to explore
+              various domains within the coding environment. Learning new
+              technologies and methodologies excites me, and I believe it's
+              essential to expand my knowledge base to adapt to the
+              ever-evolving tech landscape
             </p>
           </div>
         </div>
@@ -170,44 +180,52 @@
             <i class="las la-briefcase"></i>
             <h2>Starting in OJT</h2>
             <p>
-              When i started doing my internship at gallium, it was a cultural
-              shock for me at first, because, the way they show me how they work
-              or they given me an idea on how they work, it was surprisingly
-              calm and chill. all of the people there was very nice and
-              understanding, especially to us intern. During my internship i was
-              join with applying to the same company with some of my friends,
-              and we had a lot of fun during our time in Gallium.
+              When I began my internship at Gallium, it initially felt like a
+              cultural shock to me, i was at first out of placed on how should i
+              start and work, i was also at first very self-conscious. The way
+              they demonstrated their work environment was surprisingly calm and
+              relaxed. Everyone there was incredibly friendly and understanding,
+              particularly towards us interns. Throughout my internship, I
+              applied alongside some of my friends who were also interning at
+              Gallium, and we had a lot of fun together during our time there.
             </p>
-            <a href="#">Learn more</a>
+            <!-- <a href="#">Learn more</a> -->
           </div>
           <div>
             <i class="las la-book-open"></i>
             <h2>Learnings</h2>
             <p>
-              During my internship i have learned a lot of things, especially as
-              a junior dev role, they have given us and guide us with their tech
-              stack, which consisting of Docker, Node.js, Blitz, mariaDB and
-              MongoDB and react most of the time. The first tasks that they want
-              us to do, is to get familiarize with docker and node, they given
-              us documentations, to read on and some examples on how they work,
-              and after learning the basics and getting familiarize with docker,
-              they helped us with a hands on project, which is, "dockering our
-              thesis capstone projects".
+              During my internship, I learned a great deal, especially in my
+              role as a junior developer. The company guided us through their
+              tech stack, which included Docker, Node.js, Blitz, MariaDB,
+              MongoDB, and React. Initially, they tasked us with becoming
+              familiar with Docker and Node.js by providing documentation and
+              examples. Throughout the internship, I gained insights into how a
+              tech company collaborates for client projects. We were granted
+              access to a Jira Board containing various tickets outlining tasks
+              and deadlines. Following completion, we would demo the
+              applications we developed.
             </p>
-            <a href="#">Learn more</a>
+            <!-- <a href="#">Learn more</a> -->
           </div>
           <div>
             <i class="las la-project-diagram"></i>
-            <h2>Internal Project</h2>
+            <h2>Projects</h2>
             <p>
-              By the end of march, we were now tasked to do an internal project,
-              that is going to be used for our HR department, a project that was
-              divided into CV Generator and candidate management system, this
-              project is for the HR department, this will help lessen their
-              workload, and for me we were tasked to do the CV Generator, is
-              consisting of creating a candidate and uploading their Resume
+              I didn't really have many because of how long and how involved
+              each project was, but I will try to mention them all.<br /><br />
+
+              The projects included a CV Generator App aimed at easing HR
+              workload through candidate profile creation and resume uploads.
+              Initially tasked with backend/API, I transitioned to frontend
+              development and integration. Another project, the Employee CRUD,
+              served as a precursor to the CV Generator, focusing on basic
+              employee management. Despite its simplicity, it provided valuable
+              insights into tech stack transitions, particularly in adopting
+              nest.js with mongoDB integration.
             </p>
-            <a href="#">Learn more</a>
+
+            <!-- <a href="#">Learn more</a> -->
           </div>
         </div>
       </div>
@@ -232,19 +250,36 @@
                 listed. Only the developers or administrators would be able to
                 delete an existing product.
               </p>
-              <a href="#"><i class="las la-tractor"></i></a>
+              <a href="https://www.youtube.com/watch?v=YDz4Xjxp4Rw"
+                ><i class="las la-tractor"></i
+              ></a>
             </div>
           </div>
           <div class="work">
             <img src="HartCheck_Logo_Resize.jpg" />
             <div class="layer">
               <h3>HartCheck</h3>
-              <p>Description</p>
-              <a href="#"><i class="las la-laptop-medical"></i></a>
+              <p>
+                HartCheck is a mobile and web application. The application
+                consist of users both patient and healthcare professionals,
+                which the patient can connect to their assigned HealthCare
+                Professionals. For the mobile application only the patient has
+                access to its features while the web application the Healthcare
+                Professional has the access to it. The mobile application has
+                many different features that the patient can do, being able to
+                manually put their blood pressure and show a graphical
+                representation, a request for scheduling an appointment a
+                chatting system that they can use to connect to their assigned
+                Doctor. The web application can mostly do all those things as
+                well, but for the scheduling their the ones are able to put the
+                schedule for the patient to book and they can see the blood
+                pressure that they have save in the mobile application.
+              </p>
+              <a href="https://github.com/JanTalanay/HartCheckMobile"><i class="las la-laptop-medical"></i></a>
             </div>
           </div>
           <div class="work">
-            <img src="HartCheck_Logo_Resize.jpg" />
+            <img src="FlyHigh.jpg" />
             <div class="layer">
               <h3>Fly High</h3>
               <p>
@@ -259,7 +294,7 @@
                 the system effectively and guarantees a dependable flight
                 booking platform for consumers.
               </p>
-              <a href="#"><i class="las la-laptop-medical"></i></a>
+              <a href="https://www.youtube.com/watch?v=lnpqCq8wMCM"><i class="las la-laptop-medical"></i></a>
             </div>
           </div>
         </div>
@@ -277,7 +312,7 @@
             <p><i class="las la-laptop-code"></i>jantalanay@gmail.com</p>
             <p><i class="las la-laptop-code"></i>09667913094</p>
             <div class="social-icons">
-              <a href="linkedin"><i class="lab la-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/jan-mikhail-talanay-2449b9259/"><i class="lab la-linkedin"></i></a>
               <a href="https://github.com/JanTalanay"
                 ><i class="lab la-github"></i
               ></a>
